# logistic

./: pyproject.toml
applications/: models.py  serializers.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_auto_20210403_1812.py
companies/: admin.py  models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_auto_20210404_1111.py  0002_auto_20210404_1620.py  0002_auto_20210430_1626.py  0003_auto_20210404_1928.py
drivers/: admin.py  models.py  serializers.py  urls.py  views.py
drivers/migrations/: 0001_initial.py  0002_auto_20210418_2207.py  0002_driver_slug.py
payments/: admin.py  models.py
payments/migrations/: 0001_initial.py  0002_auto_20210403_1819.py
project/: settings.py  urls.py
project/base/: models.py  serializers.py
vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_vehicle_slug.py
