[tool.poetry]
name = "logistic"
version = "0.1.0"
description = "Logistic project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
environs = {extras = ["django"], version = "^9.3.2"}
psycopg2-binary = "^2.8.6"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^5.0.0"}
djangorestframework = "^3.12.4"
django-uuslug = "^1.2.0"
six = "^1.15.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
drf-spectacular = "^0.15.0"
django-silk = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
